Fix comment jumping off viewport when post has unsized images (#159)
* Fix comment jumping off viewport when post has unsized images

* fix comment scrolling

* retry scroll as needed

* Final version

* scroll to comment body instead of the subtree

* fix anchoring element
add fallback - cancel focusing (and remove classname) in 10 seconds

* stop trying cancelling anchoring effects - this allows to greatly simplify whole thing.
Position focused element on top of the page - just below the topbar

* revert change to package.json

--- a/frontend/src/Pages/PostPage.module.css
+++ b/frontend/src/Pages/PostPage.module.css
@@ -33,3 +33,31 @@
     color: var(--danger);
     margin: 20px;
 }
+
+@keyframes highlight-flash {
+    from {
+        background-color: transparent;
+    }
+    to {
+        background-color: var(--highlight-bg);
+    }
+}
+
+.highlight {
+    animation-duration: 0.5s;
+    animation-name: highlight-flash;
+    animation-iteration-count: 10;
+    animation-direction: alternate;
+}
+
+.focused :global(.commentBody) {
+    overflow-anchor: auto !important;
+}
+
+.focusing :global(.postComponent){
+    overflow-anchor: none;
+}
+
+.focusing :global(.commentBody) {
+    overflow-anchor: none;
+}
